# tatoeba-ckb

./: .gitignore  README.md  pyproject.toml  test.py
scripts/: add_pairs_to_tatoeba_db.py
src/tatoeba_ckb/: __init__.py  constants.py  tatoeba.py  tatoeba_ckb.py  utils.py
